fix: Fix code on products.html

--- a/pages/products.html
+++ b/pages/products.html
@@ -17,42 +17,54 @@
          </div>
          <main>
             <h2 class="display-5 fw-bold text-uppercase mb-3 mt-3 border-bottom border-black pb-3">Products</h2>
-            <div class="row g-0 border-top border-start border-black mb-3">
-               <div class="col-6 col-md-2 p-4 border-end border-bottom border-black d-flex flex-column justify-content-end">
-                  <img src="/assets/product1.png" class="img-fluid mb-auto" alt="Deskripsi gambar 1">
-                  <h3 class="fw-bold fs-4 fs-md-5 fs-lg-4 text-uppercase">00-1</h3>
-                  <p class="uppercase mt-2">Automatic Movement</p>
-               </div>
-               <div class="col-6 col-md-2 p-4 border-end border-bottom border-black d-flex flex-column justify-content-end">
-                  <img src="/assets/product2.png" class="img-fluid mb-auto" alt="Deskripsi gambar 1">
-                  <h3 class="fw-bold fs-4 fs-md-5 fs-lg-4 text-uppercase">00-2</h3>
-                  <p class="uppercase mt-2">Quartz</p>
-               </div>
-               <div class="col-6 col-md-2 p-4 border-end border-bottom border-black d-flex flex-column justify-content-end">
-                  <img src="/assets/product5.png" class="img-fluid mb-auto" alt="Deskripsi gambar 1">
-                  <h3 class="fw-bold fs-4 fs-md-5 fs-lg-4 text-uppercase">00-3</h3>
-                  <p class="uppercase mt-2">Solar</p>
-               </div>
-               <div class="col-6 col-md-2 p-4 border-end border-bottom border-black d-flex flex-column justify-content-end">
-                  <img src="/assets/product4.png" class="img-fluid mb-auto" alt="Deskripsi gambar 1">
-                  <h3 class="fw-bold fs-4 fs-md-5 fs-lg-4 text-uppercase">00-4</h3>
-                  <p class="uppercase mt-2">Mechanical Watch</p>
-               </div>
-               <div class="col-6 col-md-2 p-4 border-end border-bottom border-black d-flex flex-column justify-content-end">
-                  <img src="/assets/product3.png" class="img-fluid mb-auto" alt="Deskripsi gambar 1">
-                  <h3 class="fw-bold fs-4 fs-md-5 fs-lg-4 text-uppercase">00-5</h3>
-                  <p class="uppercase mt-2">Digital Watch</p>
-               </div>
-               <div class="col-6 col-md-2 p-4 border-end border-bottom border-black d-flex flex-column justify-content-end">
-                  <img src="/assets/product6.png" class="img-fluid mb-auto" alt="Deskripsi gambar 1">
-                  <h3 class="fw-bold fs-4 fs-md-5 fs-lg-4 text-uppercase">00-6</h3>
-                  <p class="uppercase mt-2">Solar</p>
-               </div>
+            <div class="row g-0 border-top border-start border-black mb-3 product-grid">
+                <div class="col-6 col-md-2 p-4 border-end border-bottom border-black product-item">
+                    <img src="/assets/product1.png" class="img-fluid mb-auto" alt="Deskripsi gambar 1">
+                    <div class="product-info">
+                        <h3 class="fw-bold fs-4 fs-md-5 fs-lg-4 text-uppercase">00-1</h3>
+                        <p class="uppercase mt-2">Automatic Movement</p>
+                    </div>
+                </div>
+                <div class="col-6 col-md-2 p-4 border-end border-bottom border-black product-item">
+                    <img src="/assets/product2.png" class="img-fluid mb-auto" alt="Deskripsi gambar 2">
+                    <div class="product-info">
+                        <h3 class="fw-bold fs-4 fs-md-5 fs-lg-4 text-uppercase">00-2</h3>
+                        <p class="uppercase mt-2">Quartz</p>
+                    </div>
+                </div>
+                <div class="col-6 col-md-2 p-4 border-end border-bottom border-black product-item">
+                    <img src="/assets/product5.png" class="img-fluid mb-auto" alt="Deskripsi gambar 3">
+                    <div class="product-info">
+                        <h3 class="fw-bold fs-4 fs-md-5 fs-lg-4 text-uppercase">00-3</h3>
+                        <p class="uppercase mt-2">Solar</p>
+                    </div>
+                </div>
+                <div class="col-6 col-md-2 p-4 border-end border-bottom border-black product-item">
+                    <img src="/assets/product4.png" class="img-fluid mb-auto" alt="Deskripsi gambar 4">
+                    <div class="product-info">
+                        <h3 class="fw-bold fs-4 fs-md-5 fs-lg-4 text-uppercase">00-4</h3>
+                        <p class="uppercase mt-2">Mechanical Watch</p>
+                    </div>
+                </div>
+                <div class="col-6 col-md-2 p-4 border-end border-bottom border-black product-item">
+                    <img src="/assets/product3.png" class="img-fluid mb-auto" alt="Deskripsi gambar 5">
+                    <div class="product-info">
+                        <h3 class="fw-bold fs-4 fs-md-5 fs-lg-4 text-uppercase">00-5</h3>
+                        <p class="uppercase mt-2">Digital Watch</p>
+                    </div>
+                </div>
+                <div class="col-6 col-md-2 p-4 border-end border-bottom border-black product-item">
+                    <img src="/assets/product6.png" class="img-fluid mb-auto" alt="Deskripsi gambar 6">
+                    <div class="product-info">
+                        <h3 class="fw-bold fs-4 fs-md-5 fs-lg-4 text-uppercase">00-6</h3>
+                        <p class="uppercase mt-2">Solar</p>
+                    </div>
+                </div>
             </div>
             <ul class="pagination justify-content-center gap-3">
-               <li class="page-item"><a class="page-link" href="#">&lt;</a></li>
-               <li class="page-item"><a>...</a></li>
-               <li class="page-item"><a class="page-link" href="#">&gt;</a></li>
+                <li class="page-item"><a class="page-link" href="#">&lt;</a></li>
+                <li class="page-item"><a>...</a></li>
+                <li class="page-item"><a class="page-link" href="#">&gt;</a></li>
             </ul>
          </main>
 
