--- a/public/message.html
+++ b/public/message.html
@@ -30,7 +30,7 @@
                      <th>Subject</th>
                      <th>Message</th>
                      <th>Created At</th>
-                     <th>Aksi</th>
+                     <th>Action</th>
                   </tr>
                </thead>
                <tbody id="messagesTable">
